--- a/frontend/punto_venta/src/css/index.css
+++ b/frontend/punto_venta/src/css/index.css
@@ -719,7 +719,7 @@ input[type="button"] {
 }
 
 .tabla-detalle-venta td {
-  background-color: #fff;
+  background-color: transparent;
   color: #333;
 }
 
